TS-2044: Avoid Loging client running into DENY status infinitely

When Loging host is down, Loging client will call flush_to_orphan()
to clear send_list.

And then Loging client will retry to connect to host. Once the
connection established again, client_send() will be called and Logging
client will move to LOG_COLL_CLIENT_IDLE status.

If m_flow is equal to LOG_COLL_FLOW_DENY, there is no chance to update
m_flow to LOG_COLL_FLOW_ALLOW.

We should update m_flow to LOG_COLL_FLOW_ALLOW after clear send_list
in flush_to_orphan().

Signed-off-by: Yunkai Zhang <qiushu.zyk@taobao.com>